--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://Deepak9011.github.io/work-up",
+  "homepage": "https://workupadmin.deepakagrawal.xyz",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
