--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://workupadmin.deepakagrawal.xyz",
+  "homepage": "https://workupadminpage.deepakagrawal.xyz/",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
